nagios-plugins (1.4.3.0cvs.20060707-4) UNRELEASED; urgency=low

  * NOT RELEASED YET
  * include fix for braindead behaviour in check_tcp based plugins
    such as check_simap (closes: #351847).

 -- sean finney <seanius@debian.org>  Sat, 02 Sep 2006 23:03:45 +0200

nagios-plugins (1.4.3.0cvs.20060707-3) unstable; urgency=high

  [sean finney]
  * to make backporting easier, change the build dep on libpq-dev
    to libpq-dev | postgresql-dev.  thanks to Jan Wagner for the
    suggestion.
  * fix for check_ldaps showing up in two packages (closes: #373926).
    thanks to Jan for being persistant in pointing this out.
  * that last one is rc, hence high urgency.

 -- sean finney <seanius@debian.org>  Fri, 04 Aug 2006 08:57:33 -0700

nagios-plugins (1.4.3.0cvs.20060707-2) unstable; urgency=low

  [sean finney]
  * whoops, new plugin check_mysql_query accidentally made the last
    version's nagios-plugins-basic package depend on libmysqlclient15off.

 -- sean finney <seanius@debian.org>  Sun, 09 Jul 2006 18:51:41 +0200

nagios-plugins (1.4.3.0cvs.20060707-1) unstable; urgency=low

  [sean finney]
  * new release based on latest upstream CVS HEAD, as backporting some
    of the changes would involve either massive patches to the autofoo
    generated files (Makefile/Configure etc) or by changing the packages
    to autogenerate the autofoo stuff as part of the build process,
    neither of which i like.
  * anyway, the goodies:
    - upstream incorporated fix for F'ing TBFS due to the broken .la files
      installed in the libradius-dev package
    - new check_apt plugin to check that a host is up to date wrt the debian
      package management system (run with --help for more information)
      Closes: #317763.
    - new check_ntp plugin written in C, which performs much faster and more
      reliably than the perl plugin, and does everything natively
      (sending/recieving the packets itself instead of parsing the output