@@ -1,0 +1,17 @@
+#!/bin/sh -e
+
+BASIC_PLUGINS="@BASIC_PLUGINS@"
+
+if [ "$1" = "purge" ]; then
+	if which ucf >/dev/null 2>&1; then
+		have_ucf="yes"
+	fi
+	for f in $BASIC_PLUGINS; do
+		rm -f /etc/nagios-plugins/config/$f
+		if [ "$have_ucf" = "yes" ]; then
+			ucf --purge /etc/nagios-plugins/config/$f 
+		fi
+	done 
+fi
+
+#DEBHELPER#
